# transmute-bytes

./: Cargo.toml  README.md
src/: from_bytes.rs  lib.rs  transmute.rs
tests/: basic.rs
